Address TeamScale test gaps.
- Revert List.of to ImmutableList.of in Planner components.